--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,10 @@
     /*color: white;*/
   }
 
+  #quienes-somos .text .title{
+    text-align: left;
+  } 
+
   #quienes-somos h2 {
     
     /*font-size: 2rem;*/
@@ -126,7 +130,7 @@
     /*border-radius: 10px;*/
   }
   
-  #quienes-somos div {
+  #quienes-somos div.text {
     max-width: 50%;
   }
 
@@ -574,7 +578,7 @@
       margin-bottom: 2rem;
     }
   
-    #quienes-somos div,
+    #quienes-somos div.text,
     .mision-vision div.text {
       max-width: 100%;
     }
@@ -610,6 +614,9 @@
   }
 
   @media (max-width: 700px) {
+    #quienes-somos .text .title{
+      text-align: center;
+    } 
     #contacto .details .info,
     #contacto .details .horarios {
       flex: 1 1 100%;
